Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -159,13 +159,13 @@
        "4          70       1                ford torino  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#import numpy as np\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
     "data = pd.read_csv(\"auto-mpg.csv\")\n",
     "data['horsepower'].astype(str).astype(int) # don't worry about this for now\n",
